--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Plugins/sketch-palettes"]
 	path = Plugins/sketch-palettes
 	url = git://github.com/andrewfiorillo/sketch-palettes
+[submodule "Plugins/sketch-measure"]
+	path = Plugins/sketch-measure
+	url = git://github.com/utom/sketch-measure
