--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "Plugins/Align-text-baseline-sketch-plugin"]
 	path = Plugins/Align-text-baseline-sketch-plugin
 	url = git://github.com/soutaro/Align-text-baseline-sketch-plugin
+[submodule "Plugins/Content-generator-sketch-plugin"]
+	path = Plugins/Content-generator-sketch-plugin
+	url = git://github.com/timuric/Content-generator-sketch-plugin
