--- a/.gitmodules
+++ b/.gitmodules
@@ -1,63 +1,63 @@
 [submodule "Plugins/marketch"]
-	path = Plugins/marketch
+	path = com.bohemiancoding.sketch3/Plugins/marketch
 	url = git://github.com/tudou527/marketch
 [submodule "Plugins/CSSketch"]
-	path = Plugins/CSSketch
+	path = com.bohemiancoding.sketch3/Plugins/CSSketch
 	url = git://github.com/JohnCoates/CSSketch
 [submodule "Plugins/duplicator"]
-	path = Plugins/duplicator
+	path = com.bohemiancoding.sketch3/Plugins/duplicator
 	url = git://github.com/turbobabr/duplicator
 [submodule "Plugins/sketch-palettes"]
-	path = Plugins/sketch-palettes
+	path = com.bohemiancoding.sketch3/Plugins/sketch-palettes
 	url = git://github.com/andrewfiorillo/sketch-palettes
 [submodule "Plugins/sketch-measure"]
-	path = Plugins/sketch-measure
+	path = com.bohemiancoding.sketch3/Plugins/sketch-measure
 	url = git://github.com/utom/sketch-measure
 [submodule "Plugins/Sketch-Flex-Layout"]
-	path = Plugins/Sketch-Flex-Layout
+	path = com.bohemiancoding.sketch3/Plugins/Sketch-Flex-Layout
 	url = git://github.com/hrescak/Sketch-Flex-Layout
 [submodule "Plugins/Sketch-Style-Inventory"]
-	path = Plugins/Sketch-Style-Inventory
+	path = com.bohemiancoding.sketch3/Plugins/Sketch-Style-Inventory
 	url = git://github.com/getflourish/Sketch-Style-Inventory
 [submodule "Plugins/Fluid-for-Sketch"]
-	path = Plugins/Fluid-for-Sketch
+	path = com.bohemiancoding.sketch3/Plugins/Fluid-for-Sketch
 	url = git://github.com/matt-curtis/Fluid-for-Sketch
 [submodule "Plugins/Sketch-Constraints"]
-	path = Plugins/Sketch-Constraints
+	path = com.bohemiancoding.sketch3/Plugins/Sketch-Constraints
 	url = git://github.com/bouchenoiremarc/Sketch-Constraints
 [submodule "Plugins/sketch-origami-export"]
-	path = Plugins/sketch-origami-export
+	path = com.bohemiancoding.sketch3/Plugins/sketch-origami-export
 	url = git://github.com/tarngerine/sketch-origami-export
 [submodule "Plugins/Typograph"]
-	path = Plugins/Typograph
+	path = com.bohemiancoding.sketch3/Plugins/Typograph
 	url = git://github.com/dezonik/Typograph
 [submodule "Plugins/sync.sketchplugin"]
-	path = Plugins/sync.sketchplugin
+	path = com.bohemiancoding.sketch3/Plugins/sync.sketchplugin
 	url = git://github.com/nolastan/sync.sketchplugin
 [submodule "Plugins/sketch-text-tools"]
-	path = Plugins/sketch-text-tools
+	path = com.bohemiancoding.sketch3/Plugins/sketch-text-tools
 	url = git://github.com/automat/sketch-text-tools
 [submodule "Plugins/Golden-Ratio-Line-Height-Sketch-Plugin"]
-	path = Plugins/Golden-Ratio-Line-Height-Sketch-Plugin
+	path = com.bohemiancoding.sketch3/Plugins/Golden-Ratio-Line-Height-Sketch-Plugin
 	url = git://github.com/lorenzwoehr/Golden-Ratio-Line-Height-Sketch-Plugin
 [submodule "Plugins/Prott-Sketch-Plugin"]
-	path = Plugins/Prott-Sketch-Plugin
+	path = com.bohemiancoding.sketch3/Plugins/Prott-Sketch-Plugin
 	url = git://github.com/goodpatch/Prott-Sketch-Plugin
 [submodule "Plugins/sketch-iconfont"]
-	path = Plugins/sketch-iconfont
+	path = com.bohemiancoding.sketch3/Plugins/sketch-iconfont
 	url = git://github.com/keremciu/sketch-iconfont
 [submodule "Plugins/Align-text-baseline-sketch-plugin"]
-	path = Plugins/Align-text-baseline-sketch-plugin
+	path = com.bohemiancoding.sketch3/Plugins/Align-text-baseline-sketch-plugin
 	url = git://github.com/soutaro/Align-text-baseline-sketch-plugin
 [submodule "Plugins/Content-generator-sketch-plugin"]
-	path = Plugins/Content-generator-sketch-plugin
+	path = com.bohemiancoding.sketch3/Plugins/Content-generator-sketch-plugin
 	url = git://github.com/timuric/Content-generator-sketch-plugin
 [submodule "Plugins/Unsplash-It-Sketch"]
-	path = Plugins/Unsplash-It-Sketch
+	path = com.bohemiancoding.sketch3/Plugins/Unsplash-It-Sketch
 	url = git://github.com/fhuel/Unsplash-It-Sketch
 [submodule "Plugins/RenameIt"]
-	path = Plugins/RenameIt
+	path = com.bohemiancoding.sketch3/Plugins/RenameIt
 	url = git://github.com/rodi01/RenameIt
 [submodule "Plugins/sketch-commands"]
-	path = Plugins/sketch-commands
+	path = com.bohemiancoding.sketch3/Plugins/sketch-commands
 	url = git://github.com/bomberstudios/sketch-commands
