--- a/.gitmodules
+++ b/.gitmodules
@@ -1,63 +1,63 @@
-[submodule "Plugins/marketch"]
+[submodule "com.bohemiancoding.sketch3/Plugins/marketch"]
 	path = com.bohemiancoding.sketch3/Plugins/marketch
 	url = git://github.com/tudou527/marketch
-[submodule "Plugins/CSSketch"]
+[submodule "com.bohemiancoding.sketch3/Plugins/CSSketch"]
 	path = com.bohemiancoding.sketch3/Plugins/CSSketch
 	url = git://github.com/JohnCoates/CSSketch
-[submodule "Plugins/duplicator"]
+[submodule "com.bohemiancoding.sketch3/Plugins/duplicator"]
 	path = com.bohemiancoding.sketch3/Plugins/duplicator
 	url = git://github.com/turbobabr/duplicator
-[submodule "Plugins/sketch-palettes"]
+[submodule "com.bohemiancoding.sketch3/Plugins/sketch-palettes"]
 	path = com.bohemiancoding.sketch3/Plugins/sketch-palettes
 	url = git://github.com/andrewfiorillo/sketch-palettes
-[submodule "Plugins/sketch-measure"]
+[submodule "com.bohemiancoding.sketch3/Plugins/sketch-measure"]
 	path = com.bohemiancoding.sketch3/Plugins/sketch-measure
 	url = git://github.com/utom/sketch-measure
-[submodule "Plugins/Sketch-Flex-Layout"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Sketch-Flex-Layout"]
 	path = com.bohemiancoding.sketch3/Plugins/Sketch-Flex-Layout
 	url = git://github.com/hrescak/Sketch-Flex-Layout
-[submodule "Plugins/Sketch-Style-Inventory"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Sketch-Style-Inventory"]
 	path = com.bohemiancoding.sketch3/Plugins/Sketch-Style-Inventory
 	url = git://github.com/getflourish/Sketch-Style-Inventory
-[submodule "Plugins/Fluid-for-Sketch"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Fluid-for-Sketch"]
 	path = com.bohemiancoding.sketch3/Plugins/Fluid-for-Sketch
 	url = git://github.com/matt-curtis/Fluid-for-Sketch
-[submodule "Plugins/Sketch-Constraints"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Sketch-Constraints"]
 	path = com.bohemiancoding.sketch3/Plugins/Sketch-Constraints
 	url = git://github.com/bouchenoiremarc/Sketch-Constraints
-[submodule "Plugins/sketch-origami-export"]
+[submodule "com.bohemiancoding.sketch3/Plugins/sketch-origami-export"]
 	path = com.bohemiancoding.sketch3/Plugins/sketch-origami-export
 	url = git://github.com/tarngerine/sketch-origami-export
-[submodule "Plugins/Typograph"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Typograph"]
 	path = com.bohemiancoding.sketch3/Plugins/Typograph
 	url = git://github.com/dezonik/Typograph
-[submodule "Plugins/sync.sketchplugin"]
+[submodule "com.bohemiancoding.sketch3/Plugins/sync.sketchplugin"]
 	path = com.bohemiancoding.sketch3/Plugins/sync.sketchplugin
 	url = git://github.com/nolastan/sync.sketchplugin
-[submodule "Plugins/sketch-text-tools"]
+[submodule "com.bohemiancoding.sketch3/Plugins/sketch-text-tools"]
 	path = com.bohemiancoding.sketch3/Plugins/sketch-text-tools
 	url = git://github.com/automat/sketch-text-tools
-[submodule "Plugins/Golden-Ratio-Line-Height-Sketch-Plugin"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Golden-Ratio-Line-Height-Sketch-Plugin"]
 	path = com.bohemiancoding.sketch3/Plugins/Golden-Ratio-Line-Height-Sketch-Plugin
 	url = git://github.com/lorenzwoehr/Golden-Ratio-Line-Height-Sketch-Plugin
-[submodule "Plugins/Prott-Sketch-Plugin"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Prott-Sketch-Plugin"]
 	path = com.bohemiancoding.sketch3/Plugins/Prott-Sketch-Plugin
 	url = git://github.com/goodpatch/Prott-Sketch-Plugin
-[submodule "Plugins/sketch-iconfont"]
+[submodule "com.bohemiancoding.sketch3/Plugins/sketch-iconfont"]
 	path = com.bohemiancoding.sketch3/Plugins/sketch-iconfont
 	url = git://github.com/keremciu/sketch-iconfont
-[submodule "Plugins/Align-text-baseline-sketch-plugin"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Align-text-baseline-sketch-plugin"]
 	path = com.bohemiancoding.sketch3/Plugins/Align-text-baseline-sketch-plugin
 	url = git://github.com/soutaro/Align-text-baseline-sketch-plugin
-[submodule "Plugins/Content-generator-sketch-plugin"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Content-generator-sketch-plugin"]
 	path = com.bohemiancoding.sketch3/Plugins/Content-generator-sketch-plugin
 	url = git://github.com/timuric/Content-generator-sketch-plugin
-[submodule "Plugins/Unsplash-It-Sketch"]
+[submodule "com.bohemiancoding.sketch3/Plugins/Unsplash-It-Sketch"]
 	path = com.bohemiancoding.sketch3/Plugins/Unsplash-It-Sketch
 	url = git://github.com/fhuel/Unsplash-It-Sketch
-[submodule "Plugins/RenameIt"]
+[submodule "com.bohemiancoding.sketch3/Plugins/RenameIt"]
 	path = com.bohemiancoding.sketch3/Plugins/RenameIt
 	url = git://github.com/rodi01/RenameIt
-[submodule "Plugins/sketch-commands"]
+[submodule "com.bohemiancoding.sketch3/Plugins/sketch-commands"]
 	path = com.bohemiancoding.sketch3/Plugins/sketch-commands
 	url = git://github.com/bomberstudios/sketch-commands
